<resources>
    <string name="app_name">CriminalApp</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_crime">New Crime</string>
    <string name="choose_suspect_button">choose suspect</string>
    <string name="send_crime_report_button">send crime report</string>
    <string name="empty_data_base_button">There are no crimes \n Click to add new crime</string>

    <string name="crime_report">%1$s!The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="call_suspect_button">No Number</string>

</resources>