<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".features.crime.presentation.details.CriminalFragmentDetails">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="16dp">

            <ImageView
                android:id="@+id/camera_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:cropToPadding="true"
                android:background="@color/black" />

            <ImageButton
                android:id="@+id/take_photo_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crime_title_label"
                android:textAppearance="?attr/textAppearanceHeadline5" />

            <EditText
                android:id="@+id/crime_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/crime_title_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label"
        android:textAppearance="?attr/textAppearanceHeadline5" />

    <Button
        android:id="@+id/crime_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Wed May 11 11:56 EST 2022" />

    <Button
        android:id="@+id/crime_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="11:56 " />

    <CheckBox
        android:id="@+id/crime_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_solved_label" />

    <Button
        android:id="@+id/choose_suspect_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_suspect_button" />

    <Button
        android:id="@+id/send_crime_report_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_crime_report_button" />

    <Button
        android:id="@+id/call_suspect_button"
        android:drawableStart="@android:drawable/ic_menu_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>


